welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: value update is not a member of plm.universe.Direction
  getDirection()=a
  ^SnakeBuggle:7: error: not found: value a
  getDirection()=a
                 ^SnakeBuggle:8: error: not found: value a
  if(a=EST){
     ^